@@ -1,3 +1,0 @@
-This is a beta version of the Ubuntu live CD installer. It is not a final release; that will come with the final release of Ubuntu 6.06 in June 2006.
-
-It may be necessary to resize partitions on your hard disk during the installation process. While this procedure has been tested, there may still be bugs, so be sure to <b>take a full backup of any valuable data</b> before running this program.
